@@ -675,14 +675,14 @@ provers.
 currently running automatic provers, including elapsed runtime and remaining
 time until timeout.
 
-\item[\labelitemi] \textbf{\textit{kill\_provers}:} Terminates all running
-automatic provers.
+\item[\labelitemi] \textbf{\textit{kill}:} Terminates all running
+threads (automatic provers and machine learners).
 
 \item[\labelitemi] \textbf{\textit{refresh\_tptp}:} Refreshes the list of remote
 ATPs available at System\-On\-TPTP \cite{sutcliffe-2000}.
 \end{enum}
 
-In addition, the following subcommands provide fine control over machine
+In addition, the following subcommands provide finer control over machine
 learning with MaSh:
 
 \begin{enum}
